<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".views.StaffInfoActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_above="@id/blockEnd"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/icon_ok_48px"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="#4CAF50"
                android:textSize="20sp"
                android:text="@string/scan_finish_text"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/note_for_user" />

            <com.google.android.material.card.MaterialCardView
                android:layout_margin="5dp"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView
                        android:src="@drawable/icon_user_100"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="100dp"/>

                    <LinearLayout
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="3dp"
                        android:orientation="vertical"
                        android:gravity="start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_marginTop="3dp"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textSize="15sp"
                                android:text="@string/ma_nhan_vien_full"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:id="@+id/tvStaffId"
                                android:textSize="15sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginTop="3dp"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textSize="15sp"
                                android:text="@string/name_prefix"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:id="@+id/tvName"
                                android:textSize="15sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginTop="3dp"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textSize="15sp"
                                android:text="@string/ngay_sinh"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:id="@+id/tvNgaySinh"
                                android:textSize="15sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginTop="3dp"
                            android:orientation="horizontal"
                            android:layout_marginBottom="15dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textSize="15sp"
                                android:text="@string/vi_tri"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:id="@+id/tvViTri"
                                android:textSize="15sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>



                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/blockEnd"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnFinish"
            android:background="#4CAF50"
            android:text="@string/ok"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>